Add database migrations to build command

--- a/render.yaml
+++ b/render.yaml
@@ -6,6 +6,7 @@ services:
       pip install -r requirements.txt
       cd tema/static_src && npm install && npm run build && cd ../..
       python manage.py collectstatic --noinput
+      python manage.py migrate --noinput
     startCommand: gunicorn YENO.wsgi:application
     envVars:
       - key: SECRET_KEY
